--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,147 +1,75 @@
- *,
- *::after,
- *::before {
+* {
   box-sizing: border-box;
- }
-
-  :root {
-  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  --animation-duration: 250ms;
- }
-
- body {
-  background-color: rgb(21, 21, 21);
-  color: white;
-  font-family: 'Raleway';
-  padding: 40px;
 }
 
- ul, p {
+ul, p {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+  Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #1f1f1f;
+  color: #212121;
+  line-height: 1.5;
+}
 img {
   display: block;
   max-width: 100%;
-  height: auto;
 }
-  
-  .gallery {
-    margin: 85px auto 85px auto;
-    display: grid;
-    max-width: 1140px;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    grid-auto-rows: 240px;
-    grid-gap: 12px;
-    justify-content: center;
-  }
-  
-  .gallery__item {
-    position: relative;
-    box-shadow: 0 1px 3px 0 rgba(4, 4, 4, 0.2),
-    0 1px 1px 0 rgba(3, 3, 3, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
-  }
-  
-  .gallery__link:hover{
-    transform: scale(1.03)
-  }
-  
-  .gallery__image {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    transition: transform var(--animation-duration) var(--timing-function);
-  }
-  
-  .info {
-    border-radius: 5px;
-    background-color: rgba(44, 34, 34, 0.511);
-    width: 95%;
-    height: 22px;
-    color: white;
-    justify-content: center;
-    position: absolute;
-    top: 5;
-    left: 9;
-    opacity: 0;
-    display: flex;
-    gap: 20px;
-    transition: transform var(--animation-duration) var(--timing-function);
-    transition: opacity var(--animation-duration) var(--timing-function);
-  }
-  
-  .info-item {
-    display: flex;
-  }
-    
-  .gallery__link:hover .info {
-    opacity: 1;
-    transform: scale(1.03)
-  }
-  
-  .gallery__link {
-    position: relative;
-    display: block;
-    text-decoration: none;
-    height: 100%;
-    transition: transform var(--animation-duration) var(--timing-function);
-  }
-  
-  .gallery__link:hover {
-    cursor: zoom-in;
-  }
-  
-  #search-form{
-    display: flex;
-    gap: 30px;
-    padding: 10px;
-    width: 100%;
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10px;
-    position: fixed;
-    background-color: rgba(55, 74, 81, 0.549);
-    z-index: 50;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-  
-  #search-form input{
-    margin-right: 10px;
-    font: inherit;
-    padding: 8px;
-    max-width: 320px;
-    border-radius: 5px;
-    min-width: 300px;
-    height: 40px;
-    border: none;
-    box-shadow: 5px 5px 5px;
-    border-color: rgb(96, 160, 171);
-  }
-  
-  #search-form button{
-    border-radius: 5px;
-    background-color: rgb(12, 116, 135);
-    width: 90px;
-    height: 42px;
-    font-weight: 700;
-    box-shadow: 5px 5px 5px;
-  }
-  
-  .loading {
-    display: none;
-    background-color: #c9c9c9;
-    width: 200px;
-    margin: 200px auto;
-    text-align: center;
-  }
-  
-  .show {
-    display: block;
-  }
-  
+
+
+#search-form{
+  display: flex;
+  gap: 30px;
+  padding: 10px;
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+  position: fixed;
+  background-color: rgba(55, 74, 81, 0.549);
+  z-index: 50;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+#search-form input{
+  margin-right: 10px;
+  font: inherit;
+  padding: 8px;
+  max-width: 320px;
+  border-radius: 5px;
+  min-width: 300px;
+  height: 40px;
+  border: none;
+  box-shadow: 5px 5px 5px;
+  border-color: rgb(96, 160, 171);
+}
+
+#search-form button{
+  border-radius: 5px;
+  background-color: rgb(12, 116, 135);
+  width: 90px;
+  height: 42px;
+  font-weight: 700;
+  box-shadow: 5px 5px 5px;
+}
+
+.loading {
+  display: none;
+  background-color: #c9c9c9;
+  width: 200px;
+  margin: 200px auto;
+  text-align: center;
+}
+
+.show {
+  display: block;
+}
